examples/tests/semantic/fail/wrongThenType.tig
let 
    var Taylor := "Taylor"
in 
    if Taylor = "Taylor" then
        "Taylor"
end 
